# dgenrs

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile
assets/: frag.glsl  vert.glsl
cmake/: GitVersion.cmake
src/: gles2.c  gles2.h  image.cpp  image.hpp  main.cpp  util.cpp  util.hpp  video.cpp  video.hpp
src/util/: CMakeLists.txt  asset.cpp  asset.hpp  image.cpp  image.hpp  util.cpp  util.hpp  version.cpp.in  version.hpp
test/: CMakeLists.txt  test-asset.cpp  test-image.cpp
